--- a/main.ipynb
+++ b/main.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "yandex_data = load_dataset(\"its5Q/yandex-q\", split='train')\n",
-    "# yandex = YandexDataset(yandex_data)"
+    "yandex = YandexDataset(yandex_data)"
    ]
   },
   {
