--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -689,9 +689,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open('encoded_texts.pkl', 'wb') as f:\n",
-    "    pickle.dump(encoded_texts, f)"
+    "# save dataset as csv\n",
+    "path = 'data.csv'\n",
+    "# save as csv\n",
+    "encoded_texts.to_csv(path)"
    ]
   },
   {
@@ -716,13 +717,6 @@
     "# encoded_texts[0]['input_ids'].shape\n",
     "tokenizer('history: speaker1: hello\\t speaker2: hi\\t speaker1: how are you?', padding='', return_tensors='pt')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
