--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -593,6 +593,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -689,10 +696,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save dataset as csv\n",
-    "path = 'data.csv'\n",
-    "# save as csv\n",
-    "encoded_texts.to_csv(path)"
+    "# push to HF \n",
+    "from config import params\n",
+    "name = params['dataset_name']\n",
+    "encoded_texts.push_to_hub(name)"
    ]
   },
   {
