--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -908,8 +908,8 @@
     }
    ],
    "source": [
-    "# push to HF \n",
-    "from config import params\n",
+    "import json\n",
+    "params = json.load(open('config.json', 'r'))\n",
     "name = params['dataset_name']\n",
     "texts_dict.push_to_hub(name)"
    ]
