--- a/train.ipynb
+++ b/train.ipynb
@@ -20,74 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 428,
-     "status": "ok",
-     "timestamp": 1681062207191,
-     "user": {
-      "displayName": "Rodion Khvorostov",
-      "userId": "14168350354996550512"
-     },
-     "user_tz": -120
-    },
-    "id": "1BY3OZfPw0B4",
-    "outputId": "a22de515-c17a-4677-dd51-03f90fc93079"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'YAGPT'...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "branch 'dev' set up to track 'origin/dev'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to a new branch 'dev'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['git', 'checkout', 'dev'], returncode=0)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import subprocess\n",
-    "import os\n",
-    "\n",
-    "repo_path = \"YAGPT\"\n",
-    "branch = \"dev\"\n",
-    "\n",
-    "if not os.path.isdir(repo_path):\n",
-    "    subprocess.run([\"git\", \"clone\", \"https://github.com/RodionfromHSE/YAGPT.git\"])\n",
-    "    \n",
-    "os.chdir(repo_path)\n",
-    "subprocess.run([\"git\", \"checkout\", branch])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,17 +144,135 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f54ffd65045243539299efc2ebccd37f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/435 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration under-tree--prepared-yagpt-57938d8c9614b5cb\n",
-      "Found cached dataset parquet (/home/alexw/.cache/huggingface/datasets/under-tree___parquet/under-tree--prepared-yagpt-57938d8c9614b5cb/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
+      "Downloading and preparing dataset None/None to C:/Users/rodio/.cache/huggingface/datasets/under-tree___parquet/under-tree--prepared-yagpt-57938d8c9614b5cb/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "133e9628bc0f4a4c843ad45547e11144",
+       "model_id": "040b9e2f9c5e43e1bf05b9093a1b8a4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b76dcf63bb184790a7c23c3a6b06d052",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/247M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3450e3c3de4a42c09683ac3e29a21a51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/247M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d719fde8eff4465a9a1b295db98eb215",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/54.6M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ffe0ed7cadf446a9a2c33f14899f580",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08989265a73b4a9cbcb2e3685ef283e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/755460 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10e81121295e423d98409ce6a3f93121",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/83940 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset parquet downloaded and prepared to C:/Users/rodio/.cache/huggingface/datasets/under-tree___parquet/under-tree--prepared-yagpt-57938d8c9614b5cb/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c76621429d6419b91b5ee8d2a4442c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3537,7 +3588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
