--- a/train.ipynb
+++ b/train.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "l9h5vDpTw0Bz"
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "mgig0gsqw0B3"
@@ -29,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "0rlQ4Aecw0B6"
@@ -372,6 +375,15 @@
     "print('len', len(dataset))\n",
     "pprint(dataset['train'][0])\n",
     "pprint(dataset['train'][-7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.encode(example) # Why doesn't put bos token in the beggining? https://"
    ]
   },
   {
@@ -3564,6 +3576,55 @@
     "\n",
     "eval_result = trainer.evaluate() # returns a dict with the evaluation metrics, cross-entropy loss and perplexity\n",
     "pprint(eval_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4017a057128423c8a34bbe459644ea6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Upload 1 LFS files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a2de5bbb5064767a5f212539ea5ece6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/1.52G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/under-tree/YAGPT/commit/13926a293e92814295bb291438a002615fb8e8f6', commit_message='Upload tokenizer', commit_description='', oid='13926a293e92814295bb291438a002615fb8e8f6', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "checkpoint = params.model.checkpoint\n",
+    "model.push_to_hub(checkpoint, use_auth_token=True)\n",
+    "tokenizer.push_to_hub(checkpoint, use_auth_token=True)"
    ]
   }
  ],
