--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e5c06e7f68a4f3e9379a49dd1d90d18",
+       "model_id": "9213b319e1a64fa9be7cf2118ff79e74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "068443effddb4a11918db5440eb786a1",
+       "model_id": "ca199b2a13864ee38878ce981e42d185",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,134 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "beed2722da114102a901e6d01ce51d61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Filter (num_proc=4):   0%|          | 0/25000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "654928fea5e044a9b01311f17d5d3873",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/25000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "027e919e241a492787fafa38f7207270",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/25000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6c436feadda4a0bb482916da19ecd21",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Filter (num_proc=4):   0%|          | 0/392 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18bc2d55b22a4bc78a33596012e1f847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/260 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e804e9f555c14e5c8050a3464ffe2c3b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/260 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e749afb8503b47c490911ba0bed976b6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Filter (num_proc=4):   0%|          | 0/8319 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a30d03350a497d8c090b6d77e2eca5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/8318 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20c2bc28af7b4e73a73a84b7016a7763",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/8318 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-601d260345968c2b_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-e76e81d363ec5978_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-4c5fef882a1ed523_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\bragovo___json\\bragovo--diasum-0f75c6ea734d87f9\\0.0.0\\e347ab1c932092252e717ff3f949105a4dd28b27e842dd53157d2f72e276c2e4\\cache-193986b468b9b726_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\bragovo___json\\bragovo--diasum-0f75c6ea734d87f9\\0.0.0\\e347ab1c932092252e717ff3f949105a4dd28b27e842dd53157d2f72e276c2e4\\cache-a56a92537774b09e_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\bragovo___json\\bragovo--diasum-0f75c6ea734d87f9\\0.0.0\\e347ab1c932092252e717ff3f949105a4dd28b27e842dd53157d2f72e276c2e4\\cache-905d76c90011630b_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\zjkarina___parquet\\zjkarina--matreshka-8e0974f9d53dcb5f\\0.0.0\\2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec\\cache-593c90fe3d962843_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\zjkarina___parquet\\zjkarina--matreshka-8e0974f9d53dcb5f\\0.0.0\\2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec\\cache-75ee9057bd9fad16_*_of_00004.arrow\n",
+      "Loading cached processed dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\zjkarina___parquet\\zjkarina--matreshka-8e0974f9d53dcb5f\\0.0.0\\2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec\\cache-bfdec1ccf7b91f46_*_of_00004.arrow\n"
+     ]
     }
    ],
    "source": [
@@ -323,14 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached shuffled indices for dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-424535f824fab7f8.arrow\n"
+      "Loading cached shuffled indices for dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-56a842e303e7f149.arrow\n",
+      "Loading cached split indices for dataset at C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-6853fa8e0af0107b.arrow and C:\\Users\\rodio\\.cache\\huggingface\\datasets\\its5Q___yandex-q\\default\\0.1.0\\42efa0b5c9064323024876f0df999e68eb9bebe46fc4fb946594004e53efcb0a\\cache-bee13fe6733edb16.arrow\n"
      ]
     }
    ],
@@ -341,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +249,7 @@
        "})"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4da501c71f6e4cfca5a128d1f996c3ae",
+       "model_id": "f9b2eed780784eb7a3f39d2a9c60a12c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +287,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96e7bd8cc7fd4b5aa3c2b56c87c91a27",
+       "model_id": "c97317119ba84517ae0f9cc253bf7271",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,26 +301,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c567d1a4ef0d488b905de636f4ba721c",
+       "model_id": "4cc650f91a934a5cbf45acf518d273f7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Upload 1 LFS files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd7847a718fa4a0bb3c6198252abcec3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Deleting unused files from dataset repository:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -446,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80da610eeb4e421c80935eff5e26c8e5",
+       "model_id": "eba7d8ab6d714a6f95a778b229ebf693",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70c7a1610aae424fae1d319ded64216e",
+       "model_id": "5b825b20551d4335a5c29cd159fac072",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a27e5fa27dda45dc90ba770beb596109",
+       "model_id": "53b5d3f6e2064a70b536f207bcb8ca08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -484,25 +360,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c190ef5c7c1a46709ecbbde666f8e3cd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Deleting unused files from dataset repository:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "checkpoint = dataset_params.hf_repo\n",
     "final_dataset.push_to_hub(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': ' <|speaker1|> я прочитал, что самцы медведей после зимней спячки не '\n",
+      "         'едят и не пьют около пяти месяцев.\\t\\n'\n",
+      "         '<|speaker2|> да, это верно. за этот период они снижают свою '\n",
+      "         'потребность в кислороде, их сердце замедляется, а дыхание становится '\n",
+      "         'поверхностным.\\n'\n",
+      "         '<|speaker1|> а знаете ли вы, что деревья могут общаться между собой '\n",
+      "         'посредством подземных грибов?\\n'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import random\n",
+    "n = random.randint(0, len(final_dataset['train']))\n",
+    "pprint(final_dataset['train'][n])"
    ]
   },
   {
